modified date and script

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     
     <script>
-        var countDownDate = new Date("March 16, 2025 00:00:00").getTime();
+        var countDownDate = new Date("February 20, 2025 00:00:00").getTime();
         var x = setInterval(function(){
             var now = new Date().getTime();
             var distance = countDownDate - now;
@@ -51,6 +51,15 @@
             document.getElementById("hours").innerHTML = hours;
             document.getElementById("minutes").innerHTML = minutes;
             document.getElementById("seconds").innerHTML = seconds;
+
+            if(distance<0){
+                clearInterval(x);
+                document.getElementById("days").innerHTML = "00";
+                document.getElementById("hours").innerHTML = "00";
+                document.getElementById("minutes").innerHTML = "00";
+                document.getElementById("seconds").innerHTML = "00";
+
+            }
 
 
         },1000);
